--- a/src/components/map/styles.module.css
+++ b/src/components/map/styles.module.css
@@ -1,6 +1,9 @@
 .placesAutocomplete{
      position: relative;
-    max-width: 200px;
+    
+    @media (min-width: 768px){
+        max-width: 400px;
+    }
     
 }
 
@@ -9,4 +12,15 @@
     z-index: 1;
     margin-top: 8px;
     width: 100%;
+}
+
+.header{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    
+    @media (min-width: 768px){
+        flex-direction: row;
+    }
+    
 }
