--- a/src/app/result/styles.module.css
+++ b/src/app/result/styles.module.css
@@ -18,14 +18,14 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    max-width: 80%;
     padding: 10px;
-    
-    
-    @media (min-width: 768px){
-        max-width:100%;
-    }
-    
+}
+
+.image{
+float: left;
+    margin-right: 10px;
+    border-radius: 10px;
+    margin-top: 10px;
 }
 
 .text{ 
